--- a/Week_09/rpc01/pom.xml
+++ b/Week_09/rpc01/pom.xml
@@ -11,6 +11,7 @@
         <module>rpcfx-core</module>
         <module>rpcfx-demo-api</module>
         <module>rpcfx-demo-consumer</module>
+        <module>rpcfx-demo-provider</module>
     </modules>
     <name>rpcfx</name>
     <packaging>pom</packaging>
